# polyglot-monorepo

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
python/apps/pythonapp/: README.md  project.json  pyproject.toml
python/apps/pythonapp/pythonapp/: __main__.py  hello.py
python/libs/pythonlib/: README.md  project.json  pyproject.toml
python/libs/pythonlib/pythonlib/: hello.py
typescript/apps/typescriptapp/: project.json
typescript/apps/typescriptapp/src/: main.ts
typescript/libs/typescriptlib/: README.md  package.json  project.json
typescript/libs/typescriptlib/src/: index.ts
typescript/libs/typescriptlib/src/lib/: typescriptlib.ts
