[tool.nx]
autoActivate = true

[tool.poetry]
name = "pymonorepo"
version = "1.0.0"
description = ""
authors = []
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.dependencies.pythonapp]
path = "python/apps/pythonapp"
develop = true

[tool.poetry.dependencies.pythonlib]
path = "python/libs/pythonlib"
develop = true

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
